--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #f7f9fa;
 	color: #333;
-	font-family: Helvetica, sans-serif;
+	font-family: "Avenir Next W01", sans-serif;
 	line-height: 1.2;
 	margin: 0;
 }
