--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,28 @@
 body {
 	background-color: #f7f9fa;
-	color: #333;
+	color: #212F3E;
 	font-family: "Avenir Next W01", sans-serif;
-	line-height: 1.2;
+	font-size: 18px;
+	line-height: 1.3;
 	margin: 0;
 }
+
+h1,
+h2,
+h3 {
+	line-height: 1.2;
+}
+
+h1 {
+	font-size: 2em; /* 36px */
+	font-weight: 600;
+}
+
+h2 {
+	font-size: 1.5em; /* 24px */
+	font-weight: 400;
+}
+
 
 img {
 	border: 1px solid #ddd;
@@ -16,19 +34,18 @@ img {
 
 a,
 a:visited {
-	color: #3c80cf;
+	color: #1D75CC;
 }
 
 a:hover,
 a:active {
-	color: #2a3039;
+	color: #212F3E;
 }
 
 .container {
-	background-color: #fff;
-	max-width: 50em;
+	max-width: 48em;
 	margin: 0 auto;
-	padding: 1em 2em;
+	padding: 1em;
 }
 
 @media only screen and (min-width: 600px) {
