--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,8 +55,8 @@ header {
 }
 
 header .title {
-	padding-top: 3em;
-	padding-bottom: 15em;
+	padding-top: 5vw;
+	padding-bottom: 20vw;
 }
 
 @media only screen and (min-width: 600px) {
@@ -66,12 +66,10 @@ header .title {
   }
 
 	header {
-		min-height: 35em;
 	}
 
 	header .title {
 		text-align: center;
-		padding: 5em;
 	}
 
   img {
