Fix go back button

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,20 @@ a:active {
 	color: #212F3E;
 }
 
+.back,
+.back:visited {
+	opacity: 0.5;
+	color: white;
+	display: inline-block;
+	text-decoration: none;
+	padding: 1em;
+}
+
+.back:hover,
+.back:active {
+	opacity: 1;
+}
+
 .container {
 	max-width: 48em;
 	margin: 0 auto;
